# liquidity-engine

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.yaml  docker-compose.yaml  integrative-testing-config.yaml  run-demo.sh  run-test-main.sh  usa-configs.yaml
.github/workflows/: build.yml
config/: Cargo.toml
config/src/: lib.rs
depth-driver/: Cargo.toml
depth-driver/src/: lib.rs
dev-configs/: non-usa-config.yaml  quoter-config.yaml  usa-config.yaml
exchange/: Cargo.toml
exchange-controller/: Cargo.toml
exchange-controller/src/: con.rs  lib.rs
exchange-stream/: Cargo.toml
exchange-stream/src/: kill.sh  lib.rs
exchange-stubs/: Cargo.toml
exchange-stubs/src/: lib.rs
exchange-ws/: Cargo.toml
exchange-ws/src/: lib.rs
exchange/src/: exchange.rs  lib.rs  stream.rs
internal-objects/: Cargo.toml
internal-objects/src/: lib.rs
market-maker/: Cargo.toml  Dockerfile
market-maker/decision-maker/src/: lib.rs
market-maker/exchange/: Cargo.toml
market-maker/exchange/src/: lib.rs
market-maker/order-management-system/: Cargo.toml
market-maker/order-management-system/src/: lib.rs
market-maker/src/: main.rs
market-object/: Cargo.toml
market-object/src/: bybit.rs  lib.rs  mod.rs
market-objects/: Cargo.toml  doc
market-objects/src/: binance.rs  lib.rs  local.rs  mod.rs
objs/config/: Cargo.toml
objs/errors/: Cargo.toml
objs/errors/src/: lib.rs
objs/internal-objects/src/: lib.rs
objs/market-objects/: Cargo.toml
objs/market-objects/src/: binance.rs
order/: Cargo.toml
order/src/: lib.rs
orderbook/: Cargo.toml
orderbook-quoter-server/: Cargo.toml  Dockerfile  integrative-testing-config.yaml
orderbook-quoter-server/src/: config.yaml  main.rs
orderbook-slabs/: Cargo.toml
orderbook-slabs/src/: lib.rs  liquidity.rs  slab.rs
orderbook/src/: _book  kill.sh  lib.rs  readme.md  todo
proto/: streaming.proto
proto-source/: lib.rs
proto/quote/: streaming.proto
quoter-errors/: Cargo.toml
quoter-errors/src/: lib.rs
quoter-grpc-server/: Cargo.toml
quoter-grpc-server/src/: lib.rs
ring-buffer/: Cargo.toml
ring-buffer/src/: lib.rs
testing/depth-generator/: Cargo.toml
testing/depth-generator/src/: generator.rs  lib.rs  machine.rs
testing/exchange-server/: Cargo.toml  Dockerfile
testing/exchange-server/src/: main.rs
testing/exchange-stubs/: Cargo.toml  main.rs
testing/exchange-stubs/src/: lib.rs
testing/testing-traits/: Cargo.toml
testing/testing-traits/src/: lib.rs
testing/testnets/binance/: test-prv-key.pem  test-pub-key.pem
