[package]
edition = "2021"
name = "orderbook-quoter-server-pkgs"
publish = false
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = true
debug = true

[workspace]
members = [
    "quoter-grpc-server",
    "exchange",
    "depth-driver",
    "testing/depth-generator",
    "testing/exchange-stubs",
    "internal-objects",
    "market-objects",
    "orderbook",
    "config", "multi-core-book-feed",
]
exclude = [
    "market-maker",
    "exchange-server"
]

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
fixed = "1.29.0"
bitflags = "2.9.1"

[build-dependencies]
prost = "0.11"
tonic-build = { version = "0.9.2", features = ["prost"] }
serde = "1.0.166"
serde_yaml = "0.9.22"
config = { path = "config"}

[[bin]]
name = "orderbook-quoter-server"
path = "bin/orderbook-quoter-server/src/main.rs"

[[bin]]
name = "market-maker"
path = "bin/market-maker/src/main.rs"
