[package]
edition = "2021"
name = "orderbook-quoter-server-pkgs"
publish = false
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = true
debug = true

[workspace]
members = [
    "quoter-grpc-server",
    "exchange",
    "depth-driver",
    "orderbook",
    "orderbook-slabs",
    "ring-buffer",
    "testing/depth-generator",
    "testing/exchange-stubs",
    "objs/internal-objects",
    "objs/market-objects",
    "objs/errors",
    "objs/config",
]
exclude = [
    "market-maker",
    "exchange-server"
]

[workspace.dependencies]
crossbeam-channel = "0.5.8"
tracing = "0.1.37"
rustc-hash = "1.1.0"
async-trait = "0.1.68"
futures = "0.3.28"
ordered-float = "3.7.0"
bounded-vec-deque = "0.1.1"
thin-vec = "0.2.12"
tokio = { version = "1.28.1", features = ["full"] }
fixed-vec-deque = "0.1.11"
test-log = "0.2.11"
env_logger = "*"
tracing-test = "0.2.4"
tracing-subscriber = "0.3.17"
libmath = "0.2.1"
static_assertions = "1.1.0"
itertools = "0.10.5"
rand = "0.8.5"
io-context = "0.2.0"
envtime = "0.0.4"
const_env = "0.1.2"
lazy_static = "1.4.0"
dhat = "0.3.2"
tonic = "0.9.2"
prost = "0.11.9"
futures-util = "0.3.28"
serde_json = "1.0.97"
tokio-context = "0.1.3"
tungstenite = "0.19.0"
pin-project-lite = "0.2.16"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.19.0"

exchange = { path = "exchange" }
quoter-grpc-server = { path = "quoter-grpc-server" }
market-objects =  { path = "objs/market-objects"}
internal-objects =  { path = "objs/internal-objects"}
quoter-errors =  { path = "objs/errors"}
config =  { path = "objs/config"}

ring-buffer =  { path = "ring-buffer"}
testing-traits= { path = "testing/testing-traits" }
depth-generator = { path = "testing/depth-generator"}
exchange-stubs = { path = "testing/exchange-stubs" }

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
fixed = "1.29.0"
bitflags = "2.9.1"
clippy = "0.0.302"

[build-dependencies]
prost = "0.11"
tonic-build = { version = "0.9.2", features = ["prost"] }
serde = "1.0.166"
serde_yaml = "0.9.22"
config = { path = "objs/config"}

[[bin]]
name = "orderbook-quoter-server"
path = "bin/orderbook-quoter-server/src/main.rs"

[[bin]]
name = "market-maker"
path = "bin/market-maker/src/main.rs"
