[package]
name = "depth-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel.workspace = true
futures.workspace = true
tungstenite.workspace = true
tracing.workspace = true
futures-util.workspace = true
tokio.workspace = true
serde_json.workspace = true
tokio-context.workspace = true
config.workspace = true
exchange.workspace = true
market-objects.workspace = true
quoter-errors.workspace = true
