[package]
name = "exchange-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.8"
exchange-stream = { path = "../exchange-stream"}
market-object = { path = "../market-object"}
quoter-errors = { path = "../quoter-errors"}
config = { path = "../config"}
futures = "0.3.28"
use = "0.0.0"
tungstenite = "0.19.0"
cross = "0.2.5"
tracing = "0.1.37"
