[package]
name = "exchange-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.8"
exchange-stream = { path = "../exchange-stream"}
market-objects = { path = "../market-objects"}
quoter-errors = { path = "../quoter-errors"}
config = { path = "../config"}
futures = "0.3.28"
use = "0.0.0"
tungstenite = "0.19.0"
cross = "0.2.5"
tracing = "0.1.37"
futures-util = "0.3.28"
tokio-tungstenite = "0.19.0"
tokio = "1.28.2"
serde_json = "1.0.97"
seq-macro = "0.3.4"
tokio-context = "0.1.3"
