[package]
name = "exchange-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
market-objects = { path = "../market-objects"}
config = { path = "../config"}
quoter-errors = { path = "../quoter-errors"}
exchange-stubs = { path = "../testing/exchange-stubs"}
testing-traits= { path = "../testing/testing-traits"}
crossbeam-channel = "0.5.8"
async-stream = "0.3.5"
pin-utils = "0.1.0"
futures = "0.3.28"
pin-project-lite = "0.2.9"
tracing = "0.1.37"
tungstenite = "0.19.0"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-util = { version = "0.3.28" }
bounded-vec-deque = "0.1.1"
bbqueue = "0.5.1"
native-tls = "0.2.11"
futures-channel = "0.3.28"
futures-core = "0.3.28"
tokio-curl = "0.1.11"
curl = "0.4.44"
reqwest = { version = "*", features = ["json"]}
blocking = "1.3.1"
tokio-test = "0.4.2"
parking_lot = "0.12.1"
itertools = "0.10.5"
tracing-test = "0.2.4"
oneshot = "0.1.5"
