[package]
name = "exchange-stubs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
log = "0.4.18"
tokio-tungstenite = "0.19.0"
tracing = "0.1.37"
tungstenite = "0.19.0"
tokio = { version = "1.28.1", features = ["full"] }  
