[package]
name = "exchange"
version = "0.1.0"
edition = "2021"

[dependencies]
exchange-stubs.workspace = true
testing-traits.workspace = true
config.workspace = true
market-objects.workspace = true
quoter-errors.workspace = true
reqwest.workspace = true
tokio.workspace = true
crossbeam-channel.workspace = true
tungstenite.workspace = true
futures.workspace = true
serde_json.workspace = true
futures-util.workspace = true
tracing.workspace = true
itertools.workspace = true
tokio-tungstenite.workspace = true
pin-project-lite.workspace = true
