[package]
name = "orderbook-quoter-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
tokio = { version = "1.28.1", features = ["full"] }
prost = "0.11"
async-trait = "0.1.68"
futures = "0.3.28"
async-stream = "0.3.5"
tracing = "0.1.37"
tokio-stream = { version = "0.1.14", features = ["full"]}
tracing-subscriber = "0.3.17"
clap = "3.0"
core_affinity = "0.8.0"
serde = "1.0.164"
crossbeam-channel = "0.5.8"
io-context = "0.2.0"

config = { path = "../config"}
internal-objects = { path = "../internal-objects"}
exchange-controller = { path = "../exchange-controller"}
orderbook = { path = "../orderbook"}
tokio-context = "0.1.3"
