[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
tracing = "0.1.37"
rustc-hash = "1.1.0"
async-trait = "0.1.68"
futures = "0.3.28"
ordered-float = "3.7.0"
bounded-vec-deque = "0.1.1"
typed-arena = "2.0.2"
market-objects =  { path = "../market-objects"}
internal-objects =  { path = "../internal-objects"}
quoter-errors =  { path = "../quoter-errors"}
ring-buffer =  { path = "../ring-buffer"}
config =  { path = "../config"}
testing-traits= { path = "../testing/testing-traits" }
depth-generator = { path = "../testing/depth-generator"}
thin-vec = "0.2.12"
tokio = { version = "1.28.1", features = ["full"] }
thin_str = "0.1.0"
fixed-vec-deque = "0.1.11"
thincollections = "0.5.4"
test-log = "0.2.11"
env_logger = "*"
tracing-test = "0.2.4"
tracing-subscriber = "0.3.17"
libmath = "0.2.1"
static_assertions = "1.1.0"
rust_decimal_macros = "1.29.1"
rust_decimal = "1.29.1"
itertools = "0.10.5"
rand = "0.8.5"
io-context = "0.2.0"
envtime = "0.0.4"
const_env = "0.1.2"
lazy_static = "1.4.0"
