[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel.workspace = true
tracing.workspace = true
rustc-hash.workspace = true
async-trait.workspace = true
futures.workspace = true
ordered-float.workspace = true
bounded-vec-deque.workspace = true
thin-vec.workspace = true
tokio.workspace = true
fixed-vec-deque.workspace = true
test-log.workspace = true
env_logger.workspace = true
tracing-test.workspace = true
tracing-subscriber.workspace = true
libmath.workspace = true
static_assertions.workspace = true
itertools.workspace = true
rand.workspace = true
io-context.workspace = true
envtime.workspace = true
const_env.workspace = true
lazy_static.workspace = true
dhat.workspace = true
tonic.workspace = true
market-objects.workspace = true
internal-objects.workspace = true
quoter-errors.workspace = true
ring-buffer.workspace = true
config.workspace = true
testing-traits.workspace = true
depth-generator.workspace = true
quoter-grpc-server.workspace = true
prost.workspace = true
