[package]
name = "quoter-grpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
tokio = { version = "1.28.1", features = ["full"] }
prost = "0.11"
async-trait = "0.1.68"
futures = "0.3.28"
internal-objects = { path = "../internal-objects"}
async-stream = "0.3.5"
tracing = "0.1.37"
tokio-stream = { version = "0.1.14", features = ["full"]}
