[package]
name = "exchange-stubs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
futures-util = "0.3.28"
rand = "0.8.5"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.19.0"
tracing = "0.1.37"
tungstenite = "0.19.0"
market-object = { path = "../../market-object"}
depth-generator = { path = "../depth-generator"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
