[package]
name = "exchange-stubs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
tokio-util = { version = "0.7.8", features = ["full", "rt"]}
rand = "0.8.5"
tokio = { version = "1.28.1", features = ["full", "rt"]}
tokio-tungstenite = "0.19.0"
tracing = "0.1.37"
tungstenite = "0.19.0"
market-objects = { path = "../../market-objects"}
depth-generator = { path = "../depth-generator"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.18"
env_logger = "0.10.0"
port-killer = "0.1.0"
tracing-test = "0.2.4"
async-tungstenite = "0.22.2"
futures-util = "0.3.28"
warp = "0.3.5"
